; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/mqtt/extr_mqtt_msg.c_mqtt_msg_pubrel.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/mqtt/extr_mqtt_msg.c_mqtt_msg_pubrel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MQTT_MSG_TYPE_PUBREL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @mqtt_msg_pubrel(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32*, i32** %4, align 8
  %7 = call i32 @init_message(i32* %6)
  %8 = load i32*, i32** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i64 @append_message_id(i32* %8, i32 %9)
  %11 = icmp eq i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %2
  %13 = load i32*, i32** %4, align 8
  %14 = call i32* @fail_message(i32* %13)
  store i32* %14, i32** %3, align 8
  br label %19

15:                                               ; preds = %2
  %16 = load i32*, i32** %4, align 8
  %17 = load i32, i32* @MQTT_MSG_TYPE_PUBREL, align 4
  %18 = call i32* @fini_message(i32* %16, i32 %17, i32 0, i32 1, i32 0)
  store i32* %18, i32** %3, align 8
  br label %19

19:                                               ; preds = %15, %12
  %20 = load i32*, i32** %3, align 8
  ret i32* %20
}

declare dso_local i32 @init_message(i32*) #1

declare dso_local i64 @append_message_id(i32*, i32) #1

declare dso_local i32* @fail_message(i32*) #1

declare dso_local i32* @fini_message(i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
